Refactor to accelerate computations with GPU.